// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VDataIterator.ts should hide footer 1`] = `
<div class="v-data-iterator">
  <div>
    No data available
  </div>
</div>
`;

exports[`VDataIterator.ts should render and match snapshot 1`] = `
<div class="v-data-iterator">
  <div>
    No data available
  </div>
  <div class="v-data-footer">
    <div class="v-data-footer__select">
      Items per page:
      <div class="v-input v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light v-text-field v-select"
           aria-label="Items per page:"
      >
        <div class="v-input__control">
          <div role="button"
               aria-haspopup="listbox"
               aria-expanded="false"
               aria-owns="list-4"
               class="v-input__slot"
          >
            <div class="v-select__slot">
              <div class="v-select__selections">
                <div class="v-select__selection v-select__selection--comma">
                  10
                </div>
                <input aria-label="Items per page:"
                       aria-readonly="false"
                       autocomplete="off"
                       id="input-4"
                       readonly
                       type="text"
                >
              </div>
              <div class="v-input__append-inner">
                <div class="v-input__icon v-input__icon--append">
                  <i class="v-icon notranslate theme--light material-icons"
                     aria-hidden="true"
                  >
                    $dropdown
                  </i>
                </div>
              </div>
              <input type="hidden"
                     value="10"
              >
            </div>
            <div class="v-menu">
            </div>
          </div>
        </div>
      </div>
    </div>
    <div class="v-data-footer__pagination">
      –
    </div>
    <div class="v-data-footer__icons-before">
      <button class="v-btn v-btn--disabled v-btn--icon v-btn--round v-btn--text theme--light v-size--default"
              type="button"
              disabled
              aria-label="Previous page"
      >
        <span class="v-btn__content">
          <i class="v-icon notranslate theme--light material-icons"
             aria-hidden="true"
          >
            $prev
          </i>
        </span>
      </button>
    </div>
    <div class="v-data-footer__icons-after">
      <button class="v-btn v-btn--disabled v-btn--icon v-btn--round v-btn--text theme--light v-size--default"
              type="button"
              disabled
              aria-label="Next page"
      >
        <span class="v-btn__content">
          <i class="v-icon notranslate theme--light material-icons"
             aria-hidden="true"
          >
            $next
          </i>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`VDataIterator.ts should render and match snapshot with data 1`] = `
<div class="v-data-iterator">
  <div>
    foo
  </div>
  <div>
    bar
  </div>
  <div>
    baz
  </div>
  <div>
    qux
  </div>
  <div class="v-data-footer">
    <div class="v-data-footer__select">
      Items per page:
      <div class="v-input v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light v-text-field v-select"
           aria-label="Items per page:"
      >
        <div class="v-input__control">
          <div role="button"
               aria-haspopup="listbox"
               aria-expanded="false"
               aria-owns="list-18"
               class="v-input__slot"
          >
            <div class="v-select__slot">
              <div class="v-select__selections">
                <div class="v-select__selection v-select__selection--comma">
                  10
                </div>
                <input aria-label="Items per page:"
                       aria-readonly="false"
                       autocomplete="off"
                       id="input-18"
                       readonly
                       type="text"
                >
              </div>
              <div class="v-input__append-inner">
                <div class="v-input__icon v-input__icon--append">
                  <i class="v-icon notranslate theme--light material-icons"
                     aria-hidden="true"
                  >
                    $dropdown
                  </i>
                </div>
              </div>
              <input type="hidden"
                     value="10"
              >
            </div>
            <div class="v-menu">
            </div>
          </div>
        </div>
      </div>
    </div>
    <div class="v-data-footer__pagination">
      1-4 of 4
    </div>
    <div class="v-data-footer__icons-before">
      <button class="v-btn v-btn--disabled v-btn--icon v-btn--round v-btn--text theme--light v-size--default"
              type="button"
              disabled
              aria-label="Previous page"
      >
        <span class="v-btn__content">
          <i class="v-icon notranslate theme--light material-icons"
             aria-hidden="true"
          >
            $prev
          </i>
        </span>
      </button>
    </div>
    <div class="v-data-footer__icons-after">
      <button class="v-btn v-btn--disabled v-btn--icon v-btn--round v-btn--text theme--light v-size--default"
              type="button"
              disabled
              aria-label="Next page"
      >
        <span class="v-btn__content">
          <i class="v-icon notranslate theme--light material-icons"
             aria-hidden="true"
          >
            $next
          </i>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`VDataIterator.ts should render valid no-data, loading and no-results states 1`] = `
<div class="v-data-iterator">
  <div>
    No data available
  </div>
  <div class="v-data-footer">
    <div class="v-data-footer__select">
      Items per page:
      <div class="v-input v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light v-text-field v-select"
           aria-label="Items per page:"
      >
        <div class="v-input__control">
          <div role="button"
               aria-haspopup="listbox"
               aria-expanded="false"
               aria-owns="list-32"
               class="v-input__slot"
          >
            <div class="v-select__slot">
              <div class="v-select__selections">
                <div class="v-select__selection v-select__selection--comma">
                  10
                </div>
                <input aria-label="Items per page:"
                       aria-readonly="false"
                       autocomplete="off"
                       id="input-32"
                       readonly
                       type="text"
                >
              </div>
              <div class="v-input__append-inner">
                <div class="v-input__icon v-input__icon--append">
                  <i class="v-icon notranslate theme--light material-icons"
                     aria-hidden="true"
                  >
                    $dropdown
                  </i>
                </div>
              </div>
              <input type="hidden"
                     value="10"
              >
            </div>
            <div class="v-menu">
            </div>
          </div>
        </div>
      </div>
    </div>
    <div class="v-data-footer__pagination">
      –
    </div>
    <div class="v-data-footer__icons-before">
      <button class="v-btn v-btn--disabled v-btn--icon v-btn--round v-btn--text theme--light v-size--default"
              type="button"
              disabled
              aria-label="Previous page"
      >
        <span class="v-btn__content">
          <i class="v-icon notranslate theme--light material-icons"
             aria-hidden="true"
          >
            $prev
          </i>
        </span>
      </button>
    </div>
    <div class="v-data-footer__icons-after">
      <button class="v-btn v-btn--disabled v-btn--icon v-btn--round v-btn--text theme--light v-size--default"
              type="button"
              disabled
              aria-label="Next page"
      >
        <span class="v-btn__content">
          <i class="v-icon notranslate theme--light material-icons"
             aria-hidden="true"
          >
            $next
          </i>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`VDataIterator.ts should render valid no-data, loading and no-results states 2`] = `
<div class="v-data-iterator">
  <div>
    Loading items...
  </div>
  <div class="v-data-footer">
    <div class="v-data-footer__select">
      Items per page:
      <div class="v-input v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light v-text-field v-select"
           aria-label="Items per page:"
      >
        <div class="v-input__control">
          <div role="button"
               aria-haspopup="listbox"
               aria-expanded="false"
               aria-owns="list-32"
               class="v-input__slot"
          >
            <div class="v-select__slot">
              <div class="v-select__selections">
                <div class="v-select__selection v-select__selection--comma">
                  10
                </div>
                <input aria-label="Items per page:"
                       aria-readonly="false"
                       autocomplete="off"
                       id="input-32"
                       readonly
                       type="text"
                >
              </div>
              <div class="v-input__append-inner">
                <div class="v-input__icon v-input__icon--append">
                  <i class="v-icon notranslate theme--light material-icons"
                     aria-hidden="true"
                  >
                    $dropdown
                  </i>
                </div>
              </div>
              <input type="hidden"
                     value="10"
              >
            </div>
            <div class="v-menu">
            </div>
          </div>
        </div>
      </div>
    </div>
    <div class="v-data-footer__pagination">
      –
    </div>
    <div class="v-data-footer__icons-before">
      <button class="v-btn v-btn--disabled v-btn--icon v-btn--round v-btn--text theme--light v-size--default"
              type="button"
              disabled
              aria-label="Previous page"
      >
        <span class="v-btn__content">
          <i class="v-icon notranslate theme--light material-icons"
             aria-hidden="true"
          >
            $prev
          </i>
        </span>
      </button>
    </div>
    <div class="v-data-footer__icons-after">
      <button class="v-btn v-btn--disabled v-btn--icon v-btn--round v-btn--text theme--light v-size--default"
              type="button"
              disabled
              aria-label="Next page"
      >
        <span class="v-btn__content">
          <i class="v-icon notranslate theme--light material-icons"
             aria-hidden="true"
          >
            $next
          </i>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`VDataIterator.ts should render valid no-data, loading and no-results states 3`] = `
<div class="v-data-iterator">
  <div>
    No matching records found
  </div>
  <div class="v-data-footer">
    <div class="v-data-footer__select">
      Items per page:
      <div class="v-input v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light v-text-field v-select"
           aria-label="Items per page:"
      >
        <div class="v-input__control">
          <div role="button"
               aria-haspopup="listbox"
               aria-expanded="false"
               aria-owns="list-32"
               class="v-input__slot"
          >
            <div class="v-select__slot">
              <div class="v-select__selections">
                <div class="v-select__selection v-select__selection--comma">
                  10
                </div>
                <input aria-label="Items per page:"
                       aria-readonly="false"
                       autocomplete="off"
                       id="input-32"
                       readonly
                       type="text"
                >
              </div>
              <div class="v-input__append-inner">
                <div class="v-input__icon v-input__icon--append">
                  <i class="v-icon notranslate theme--light material-icons"
                     aria-hidden="true"
                  >
                    $dropdown
                  </i>
                </div>
              </div>
              <input type="hidden"
                     value="10"
              >
            </div>
            <div class="v-menu">
            </div>
          </div>
        </div>
      </div>
    </div>
    <div class="v-data-footer__pagination">
      –
    </div>
    <div class="v-data-footer__icons-before">
      <button class="v-btn v-btn--disabled v-btn--icon v-btn--round v-btn--text theme--light v-size--default"
              type="button"
              disabled
              aria-label="Previous page"
      >
        <span class="v-btn__content">
          <i class="v-icon notranslate theme--light material-icons"
             aria-hidden="true"
          >
            $prev
          </i>
        </span>
      </button>
    </div>
    <div class="v-data-footer__icons-after">
      <button class="v-btn v-btn--disabled v-btn--icon v-btn--round v-btn--text theme--light v-size--default"
              type="button"
              disabled
              aria-label="Next page"
      >
        <span class="v-btn__content">
          <i class="v-icon notranslate theme--light material-icons"
             aria-hidden="true"
          >
            $next
          </i>
        </span>
      </button>
    </div>
  </div>
</div>
`;
